# yt-clipper

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
yt_clipper/: cli.py  download.py  search.py  segment.py  select.py  transcribe.py  trim.py  types.py  utils.py
