[project]
name = "yt-clipper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "yt-dlp>=2024.8.6",
    "faster-whisper>=1.0.3",
    "ctranslate2>=4.4.0",
    "numpy>=1.26.0",
    "soundfile>=0.12.1",
    "librosa>=0.10.1",
    "pydantic>=2.8.2",
    "scikit-learn>=1.5.0",
]

[project.scripts]
yt-clipper = "yt_clipper.cli:main"

[tool.setuptools]
packages = ["yt_clipper"]
